# grievance

./: .deepsource.toml  .gitignore  README.md
.github/workflows/: app-security.yml  backend-ci.yml  ci-unit-tests.yml  coverage.yml  deploy.yml  format.yml  infracost.yml  lint.yml  terraform-prod.yml  terraform-security.yml
backend/: .coveragerc  .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.ingestion  Dockerfile.test  MYSQL_README.md  README-AWS-DEPLOYMENT.md  README-DOCKER.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt
backend/analysis/: 03_status.ipynb  05_action_history.ipynb  grievance_common.py
backend/app/: README.md  config.py  main.py  s3service.py  utils.py
backend/app/api/: README.md
backend/app/db/: README.md  crud.py  migration_from_mysql.py  models.py  session.py
backend/app/ingestion/: README.md  __init__.py  benchmark_client.py  client.py  document_ingestion.py  orchestrator.py  schemas.py
backend/app/pipelines/: README.md  _driver.py
backend/app/pipelines/ortps/: README.md  __init__.py  analyzers.py  category_labeling_nodes.py  config.py  detectors.py  labelers.py  lang_detection_nodes.py  language_profiles.py  topic_config.py  topic_nodes.py  topic_profiles.py  validation.py
backend/app/pipelines/shared/: README.md  __init__.py  embedding_cache.py  language_detection.py
backend/app/pipelines/shared/topic_modeling/: README.md  __init__.py  bertopic_engine.py
backend/app/services/: README.md
backend/app/tests/: README.md  conftest.py  test_crud.py  test_document_ingest.py  test_ingestion_api_client.py  test_ingestion_orchestration.py  test_integration_ingestion.py  test_s3service.py  test_schemas.py
backend/app/tests/pipelines/: conftest.py  test_category_labeling_nodes.py  test_compat_shims.py  test_lang_detection_nodes.py  test_ortps_integration.py  test_topic_config.py  test_topic_nodes.py
backend/app/tests/pipelines/shared/: __init__.py  test_bertopic_engine.py  test_embedding_cache.py  test_language_detection.py
backend/app/tests/scripts/: __init__.py  conftest.py  test_ortps_category_analysis.py  test_ortps_topic_analysis.py
backend/notebooks/: 1.04-ym-presentation-analytics.ipynb  grievance_text_analysis.ipynb  sample_ticket_step_1_to_2_distribution.ipynb
backend/notebooks/analysis/: 04_disposal.ipynb  06_nan_analysis.ipynb
backend/output/ortps_analysis/: fiscal_year_aggregation_long.tex  fiscal_year_aggregation_wide.tex  ortps_analysis.tex  ortps_dept_top15.tex  ortps_subcat_top20.tex  topic_stopwords_analysis.md
backend/output/ortps_analysis/topics/: Building_Construction_topics.tex  Certificates_topics.tex  Driving_Licences_topics.tex  Identity_Social_Certificates_topics.tex  Income_Welfare_Benefits_topics.tex  Land_Records_topics.tex  Land_matters_topics.tex  Police_Legal_topics.tex  Ration_card_topics.tex  Scholarship_topics.tex  Utilities_Connections_topics.tex  Vehicle_Services_topics.tex  Verification_Legal_topics.tex  topic_summary.tex
backend/scripts/: alembic.sh  compare_data_dump_vs_api.py  deploy-aws.sh  docker-run.sh  exp_analysis.py  grievance_analytics_and_maps.py  grievance_cleaning.py  grievances_data.py  join_grievances_notebook.py  monitor-deployment.sh  ortps_category_analysis.py  ortps_crosstab_analysis.py  ortps_topic_analysis.py  read_mysql_dump.sh  run-local.sh  sample_complaints_with_docs.py  setup-mysql.sh
notebook/: datacleaningtrial.ipynb
terraform/: README.md  main.tf  outputs.tf  terraform.dev.tfvars  terraform.main.tfvars  terraform.prod.tfvars  variables.tf
