[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grievance-analytics"
version = "0.1.1"
description = "An analytics app for grievance redressal data"
authors = [
    {name = "Yashaswi Mohanty", email = "yashaswi@uchicago.edu"},
    {name = "Cesar Nunez", email = "cnunezh@uchicago.edu"}
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "black==25.1.0",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click==8.2.1",
    "fastapi==0.115.12",
    "flake8==7.2.0",
    "h11==0.16.0",
    "h2",
    "hpack",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "hyperframe",
    "idna",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "loguru",
    "mccabe==0.7.0",
    "mypy_extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pycodestyle==2.13.0",
    "pycparser",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "pydantic_core==2.33.2",
    "pyflakes==3.3.2",
    "Pygments==2.19.1",
    "PySocks",
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2",
    "requests",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "urllib3",
    "uvicorn==0.34.3",
    "uvloop==0.21.0; sys_platform != 'win32'",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "zstandard==0.23.0",
    # Additional dependencies for your project
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "boto3",
    "schedule",
    "tqdm",
    "more-itertools>=10.7.0",
    "aiofiles>=24.1.0",
    "ipython>=8.37.0",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
    "dask>=2025.5.1",
    "colorama>=0.4.6",
    "moto>=5.1.6",
    "coverage>=7.9.2",
    "argparse>=1.4.0",
    "coverage>=7.9.2",
    "terraform-local>=0.24.0",
    "localstack>=4.6.0",
    "awscli-local>=0.22.0",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.3",
    "duckdb>=1.4.3",
    "pyarrow>=23.0.0",
    "polars>=1.37.1",
    "lingua-language-detector>=2.1.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "sentence-transformers>=5.2.0",
    "torch>=2.10.0",
    "xlsxwriter>=3.2.9",
    "wordcloud>=1.9.6",
    "fasttext>=0.9.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "*.tests*"]

[tool.setuptools.package-data]
app = ["*.py", "**/*.py"]


[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "coverage",
    "pytest-cov"
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \\.__main__\\.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "raise ImportError",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.bandit]
exclude_dirs = ["app/tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "nbstripout>=0.9.1",
]
